# UOW

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7156747c85a0_init.py
src/app_book/: queries.py
src/app_book/adapters/: notifications.py  orm.py  repository.py
src/app_book/domain/: events.py  models.py
src/app_book/entrypoints/: dependencies.py
src/app_book/entrypoints/v1/: http_exceptions.py  http_response.py  router.py  schemas.py
src/app_book/service/: handlers.py  messagebus.py  unit_of_work.py  use_cases.py
src/application/: app.py  exceptions.py  http_exceptions.py  init_app.py  routers.py
src/book/adapters/: orm.py  repository.py
src/book/config/: postgres.py
src/book/domain/: events.py  models.py
src/common/: types.py
src/config/: settings.py
src/config/schemas/: __init__.py  fastapi.py  general.py  postgres.py
src/events/: bootstrap.py  consumer.py  messagebus.py  orm.py
src/manager/adapters/: repository.py
src/manager/application/: __init__.py  app.py  exception_handler.py  init_app.py  routers.py
src/manager/common/: container.py  test_container.py  types.py
src/manager/config/: __init__.py  settings.py
src/manager/config/schemas/: __init__.py  fastapi.py
src/modules/book/adapters/: orm.py  repository.py
src/modules/book/domain/: events.py  models.py
src/modules/book/entrypoints/v1/: dependencies.py  router.py
src/modules/book/service/: __inirt__.py  handlers.py  messagebus.py  unit_of_work.py  use_cases.py
