[project]
name = "uow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.4",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
    "punq>=0.7.0",
    "orjson>=3.11.5",
]
